[gd_scene load_steps=2 format=3 uid="uid://cpkk7jal2oc44"]

[ext_resource type="Script" uid="uid://5tp7iryqoqm3" path="res://Scripts/Parts/PartBipedLegs.gd" id="1_r67c5"]

[node name="PartMovement" type="Node3D"]
script = ExtResource("1_r67c5")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.214, -0.03)
size = Vector3(0.255798, 0.491455, 0.286865)

[node name="SlotLegR" type="Node3D" parent="."]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0.132965, -0.422274, 0)

[node name="SlotLegL" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.133, -0.42268, 0)

[node name="marker1" type="CSGSphere3D" parent="."]
visible = false
radius = 0.1

[node name="marker2" type="CSGSphere3D" parent="."]
visible = false
radius = 0.1

[node name="marker3" type="CSGSphere3D" parent="."]
visible = false
radius = 0.1

[node name="LegsCenter" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.433388, 0)
